Refactor ObservationsController and ObservationService to enhance functionality; update default station handling and improve observation merging logic. Add integration tests for new features and adjust application configuration for default stations.